--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Shady Osama</a>.
-  </div>
+  </div><br>
 </body>
 </html>
